@@ -1,3 +1,8 @@
+TAG: qcreports_db-6-0-27-1
+DATE: 01/15/2026
+STAFF: lec
+wts2-1780/Move gxd_antigen info to gxd_antibody
+
 TAG: qcreports_db-6-0-26-6
 TAG: qcreports_db-6-0-26-5
 DATE: 12/16/2025
